2018-09-xx 1.6.0 [xxxxxxx]
  + element configuration moved from bottom area to the right of the window
2018-08-26 1.5.1 [81c92e6]
  . no automatic database upgrades anymore, use -f parameter
  + fix for persisting moved relationships in sequence and timing diagrams
2018-08-25 1.5.0 [b1fe3ca]
  + Sequence and timing diagrams show messages/transitions
  + In sequence and timing diagrams, messages/transitions can be moved
  + Box and list diagrams hide all relationships
  + List diagrams soft the classifiers by list_order now
  . Database format changed (list_oder field for classifiers), up- and downwards compatible.
2018-05-11 1.4.0 [66861a9]
  + relationships can connect to ports
  + the repair-database function can detect and repair broken focused_feature keys in diagramelements
  + the repair-database function can detect and repair broken from/to_feature keys in relationships
2018-04-01 1.3.0 [7bc9dff]
  + lifelines are created and removed automatically for timing, sequence and communication diagrams
  + lifelines are drawn and can be selected/edited
  + ports can be created/selected/edited and are drawn
2018-03-04 1.2.0 [78421df]
  + all relations to/from multiple classifier instances are drawn
2018-01-23 1.1.0 [086e559]
  + greyed-out classifiers also grey-out their contained features
  . sqlite updated from 3.10.2 to 3.21.0
  . Database format changed.
    A newer crystal_facet_uml can still open older database files (and immediately update the file format).
    Older crystal_facet_uml cannot open database files created or opened by a newer crystal_facet_uml!
  + relations where source and destination are identical are beautified
  + for comments and requirements, the description is shown
2018-01-03 1.0.0 [4262282]
  + F7 in navigation view moves child diagram up and parent down
  + The text export contains IDs
2017-12-26 0.20.0 [534b171]
  + navigation mode: a newly initialized database shows a quick guide